force-app/main/default/objects/vlocity_ins__VlocityDocuSignTemplate__c/vlocity_ins__VlocityDocuSignTemplate__c.object-meta.xml
<CustomObject>
    <label>Vlocity DocuSign Template</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Vlocity Docusign Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity DocuSign Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>