force-app/main/default/objects/vlocity_ins__VlocityDocuSignTemplate__c/fields/vlocity_ins__DocuSignAccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DocuSignAccountId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DocuSign Account Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>