force-app/main/default/objects/vlocity_ins__VlocityDocuSignTemplate__c/fields/vlocity_ins__RoleTabs__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__RoleTabs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Role Tabs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>