force-app/main/default/objects/vlocity_ins__VlocityDocuSignTemplate__c/fields/vlocity_ins__TabsData__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__TabsData__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tabs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>